syntax = "proto3";

package allocations.types.v1;

message OwnedStakeTokenChange {
  string indexer = 1;
  string tokensAmount = 2; //big.Int
}

message OwnedStakeTokenChanges {
  repeated OwnedStakeTokenChange ownedStakeTokenChanges = 1;
}

message AllocationClosedData {
  string address = 1;
  string deploymentId = 2;
  string tokens = 3; //big.Int
  string allocationId = 4;
  string poi = 5;
  string transactionHash = 6;
}

message AllocationClosedDatas {
  repeated AllocationClosedData allocationClosedDatas = 1;
}

message AllocationClosedResult {
  string address = 1;
  string allocationId = 2;
  string tokens = 3; //big.Int
  string stake = 5; //big.Int
}

message StakedTokensChange {
  string indexer = 1;
  uint64 blockNumber = 2;
  string transactionHash = 3;
  string tokens = 4; //big.Int
  string stake = 5; //big.Int
}

message StakedTokensChanges {
  repeated StakedTokensChange stakedTokensChanges = 1;
}